--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pre-commit = "^3.7.1"
+pre-commit = "^4.2.0"
 torchvision = "^0.18.1"
 pytorch-lightning = "^2.3.1"
 torch = "^2.3.1"
@@ -16,6 +16,10 @@ tensorboard = "^2.17.0"
 matplotlib = "^3.9.0"
 scikit-learn = "^1.7.0"
 kagglehub = "^0.3.12"
+mlflow = "^3.1.1"
+hydra-core = "^1.3.2"
+psutil = "^7.0.0"
+python-multipart = "^0.0.20"
 
 
 [build-system]
