--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,12 @@
 name = "alzheimer_classification"
 version = "0.2.0"
 description = "Detecting the stage of Alzheimer's based on MRI images."
-authors = ["s24575 <sawickigrzegorz66@gmail.com>"]
+authors = ["Grzegorz Sawicki <sawickigrzegorz66@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pre-commit = "^4.2.0"
 torchvision = "^0.18.1"
-pytorch-lightning = "^2.3.1"
 torch = "^2.3.1"
 numpy = "<2.0.0"
 tensorboard = "^2.17.0"
@@ -20,7 +18,10 @@ mlflow = "^3.1.1"
 hydra-core = "^1.3.2"
 psutil = "^7.0.0"
 python-multipart = "^0.0.20"
+pytorch-lightning = "^2.5.2"
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
