--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ hydra-core = "^1.3.2"
 psutil = "^7.0.0"
 python-multipart = "^0.0.20"
 pytorch-lightning = "^2.5.2"
+streamlit = "^1.46.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
