--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,39 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-torchvision = "^0.18.1"
-torch = "^2.3.1"
+
+[tool.poetry.group.training]
+optional = true
+
+[tool.poetry.group.training.dependencies]
 numpy = "<2.0.0"
-tensorboard = "^2.17.0"
-matplotlib = "^3.9.0"
-scikit-learn = "^1.7.0"
-kagglehub = "^0.3.12"
+pytorch-lightning = "^2.5.2"
+torch = "^2.3.1"
+torchvision = "^0.18.1"
 mlflow = "^3.1.1"
 hydra-core = "^1.3.2"
-psutil = "^7.0.0"
+kagglehub = "^0.3.12"
+
+[tool.poetry.group.backend]
+optional = true
+
+[tool.poetry.group.backend.dependencies]
+uvicorn = "^0.29.0"
+fastapi = "^0.111.0"
 python-multipart = "^0.0.20"
 pytorch-lightning = "^2.5.2"
-streamlit = "^1.46.1"
+torch = "^2.3.1"
+torchvision = "^0.18.1"
+mlflow = "^3.1.1"
+
+[tool.poetry.group.frontend]
+optional = true
+
+[tool.poetry.group.frontend.dependencies]
+streamlit = "^1.35.0"
+
+[tool.poetry.group.dev]
+optional = true
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
